# c_dynamic_array

./: .gitignore  CMakeLists.txt  readme.md
src/: main.c  test
src/include/: maybe.h  vector.h
tests/: CMakeLists.txt  main.c
